# packages/contracts/src/schema.ts
@@ -1172,6 +1172,22 @@ export interface paths {
         patch?: never;
         trace?: never;
     };
+    "/api/v1/stock-notifications/admin/summary": {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        get: operations["StockNotificationsController_getAdminSummary_v1"];
+        put?: never;
+        post?: never;
+        delete?: never;
+        options?: never;
+        head?: never;
+        patch?: never;
+        trace?: never;
+    };
     "/api/v1/pricing/suppliers": {
         parameters: {
             query?: never;
@@ -5255,6 +5271,23 @@ export interface operations {
                 content: {
                     "application/json": components["schemas"]["StockNotificationResponseDto"];
                 };
+            };
+        };
+    };
+    StockNotificationsController_getAdminSummary_v1: {
+        parameters: {
+            query?: never;
+            header?: never;
+            path?: never;
+            cookie?: never;
+        };
+        requestBody?: never;
+        responses: {
+            200: {
+                headers: {
+                    [name: string]: unknown;
+                };
+                content?: never;
             };
         };
     };
